Added panelists photos.

--- a/program.html
+++ b/program.html
@@ -168,7 +168,7 @@ Session Chair: Nic Lane (Samsung AI, University of Cambridge)
 <div style="font-size: small;">
 <b><a href='keynote.html#bouganis'>Deep Neural Networks in the Embedded Space: Opportunities and Challenges</a></b>
 <BR><BR>
-<a href='https://www.imperial.ac.uk/intelligent-digital-systems/'>Christos Bouganis</a></b>
+<a href='https://www.imperial.ac.uk/intelligent-digital-systems/group-members/'>Christos Bouganis</a></b>
 <BR>
 <i>Imperial College London</i>
 </div>
@@ -341,13 +341,39 @@ Chair: Stylianos I. Venieris (Samsung AI)
 </b>&nbsp;</li></div> 
 </td>
 </tr>
+</table>
+<table>
 <tr valign='top'>
-<td>
+<td width="33%">
+<img height=90 src='images/dr_bouganis.jpg' /><BR>
+<div style="font-size: small;">
+<a href='https://www.imperial.ac.uk/intelligent-digital-systems/group-members/'>Christos Bouganis</a> <BR> (<i>Imperial College London</i>)
+</div>
+</td>
+<td width="33%">
+<img height=90 src='images/koen_helwegen.jpg' /><BR>
+<div style="font-size: small;">
+<a href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a> <BR> (<i>Plumerai</i>)
+</div>
+</td>
+<td width="33%">
+<img height=90 src='images/aruna_balasubramanian.jpg' /><BR>
+<div style="font-size: small;">
+<a href="https://www3.cs.stonybrook.edu/~arunab/">Aruna Balasubramanian</a> <BR> (<i>Stony Brook University</i>)
+</div>
+</td>
+<td width="33%">
+<img height=90 src='images/poonam_yadav.jpg' /><BR>
+<div style="font-size: small;">
+<a href="https://poonamyadav.net/">Poonam Yadav</a> <BR> (<i>University of York, UK</i>)
+</div>
+</td>
+<!--td>
 <p><b>&nbsp;&nbsp;&nbsp;&nbsp;Panelists:</b></p>
 <ul>
 <div style="font-size: small;">
 <li>Christos Bouganis (Imperial College London), Koen Helwegen (Plumerai), Aruna Balasubramanian (Stony Brook University), Poonam Yadav (University of York, UK) &nbsp;</li></div>
-</td>
+</td-->
 </tr>
 </table>
 
