--- a/program.html
+++ b/program.html
@@ -289,7 +289,7 @@ for 1-bit Faster R-CNN
 </a></b>&nbsp;<BR>
 Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i>Beihang University</i>)
 <BR>
-<a href="videos/[2020]_emdl_amplitude_suppression_and_direct_activation_in_networks_for_1bit_frcnn.mp4">Full presentation</a>
+<a href="https://media.githubusercontent.com/media/emdl20/emdl20.github.io/master/videos/2020_emdl_amplitude_suppression_and_direct_activation_in_networks_for_1bit_frcnn.mp4">Full presentation</a>
 </div> 
 </td>
 </tr>
