Added Yunxin Liu as session chair.

--- a/program.html
+++ b/program.html
@@ -182,6 +182,9 @@ Session Chair: Nic Lane (Samsung AI, University of Cambridge)
 </p-->
 <p>
 <b>14:45 - 15:30 Session 1</b>
+<BR>
+Session Chair: Yunxin Liu (Microsoft Research)
+</p>
 
 <table>
 <tr valign='top'>
