Added Hyeji Kim as session chair for session 2.

--- a/program.html
+++ b/program.html
@@ -265,7 +265,10 @@ Session Chair: Marco Gruteser (Google, Rutgers University)
 </tr>
 </table>
 
-<p><b>16.15 - 17.00 Session 2</b></p>
+<p><b>16.15 - 17.00 Session 2</b>
+<BR>
+Session Chair: Hyeji Kim (University of Texas at Austin)
+</p>
 
 <table>
 <tr valign='top'>
